bug fix: timepicker is covered

--- a/public/sass/components/_tabbed_view.scss
+++ b/public/sass/components/_tabbed_view.scss
@@ -62,7 +62,7 @@
   top: 52px;
   left: 0;
   right: 0;
-  z-index: 1;
+  z-index: 11;
   background: white;
   padding: 50px;
 }
